# new_nfl

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
data/db/: new_nfl.duckdb
deploy/windows-vps/: run_backup.ps1  run_slice.ps1  vps_bootstrap.ps1  vps_install_tasks.ps1  vps_install_tasks_step2.ps1
docs/: CHAT_HANDOFF_PROTOCOL.md  DELIVERY_PROTOCOL.md  ENGINEERING_MANIFEST.md  ENGINEERING_MANIFEST_v1_3.md  HANDOFF_GUIDE.md  HANDOFF_MANIFEST.md  INDEX.md  LESSONS_LEARNED.md  LESSONS_LEARNED_PROTOCOL.md  OBSERVABILITY.md  PARALLEL_DEVELOPMENT.md  PROJECT_STATE.md  QUICKSTART.md  RELEASE_PROCESS.md  RETROSPECTIVE_T1_X.md  RUNBOOK.md  RUNBOOK_VPS_PREVIEW_RELEASE.md  T2_3_PLAN.md  TEST_STRATEGY.md  UI_STYLE_GUIDE_v0_1.md  USE_CASE_VALIDATION_v0_1.md  VALIDATION_PROTOCOL.md  WORKING_AGREEMENT.md
docs/_handoff/: HANDOFF_A0_1_architecture_concept.md  HANDOFF_A0_2_data_platform_and_scope.md  HANDOFF_A0_3_source_governance_and_metadata.md  (+52 more)
newnfl_T1_0C_repo_cleanup_20260327_001/: .gitignore
tests/: test_adapter_fetch_contract.py  test_adapter_slice_registry.py  test_adapters.py  test_backup.py  test_bootstrap.py  test_bootstrap_ontology.py  test_cli_adapter.py  test_cli_fetch_contract.py  test_cli_remote_fetch.py  test_cli_stage_load.py  test_column_aliases.py  test_core_browse.py  test_core_browse_cli.py  test_core_load.py  test_core_load_cli.py  test_core_lookup.py  test_core_lookup_cli.py  test_core_summary.py  test_core_summary_cli.py  test_dedupe.py  test_dedupe_review_resolve.py  test_deploy_scripts.py  test_diff.py  test_freshness.py  test_game_view.py  test_games.py  test_games_view.py  test_health.py  test_jobs_cli.py  test_jobs_model.py  test_jobs_runner.py  test_logging.py  test_mart.py  test_metadata.py  test_metadata_migration.py  test_ontology.py  test_player_stats.py  test_player_view.py  test_players.py  test_provenance.py  (+24 more)
tools/: bootstrap_local.ps1  run_quality_gates.ps1  seed_default_sources.ps1
(+171 files in other folders)
