[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "new-nfl"
version = "0.1.0"
description = "NEW NFL private data platform bootstrap"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "duckdb>=1.1",
  "jinja2>=3.1",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
new-nfl = "new_nfl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"new_nfl.web" = ["templates/**/*.html", "static/css/*.css", "static/js/*.js", "static/icons/*.svg", "static/fonts/*.woff2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q -m 'not network'"
markers = [
  "network: live HTTP smoke against external upstream URLs (opt-in via 'pytest -m network'); excluded from the default pytest run.",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
